syntax = "proto3";

option csharp_namespace = "Conduits.GrpcCommon";

package conduits;

// The generic service definition.
service GrpcService {
  rpc NoStream (GrpcPayload) returns (GrpcPayload);
  rpc StreamDn (GrpcPayload) returns (stream GrpcPayload);
  rpc StreamUp (stream GrpcPayload) returns (GrpcPayload);
  rpc BiStream (stream GrpcPayload) returns (stream GrpcPayload);
}

message GrpcPayload {
  int32 tag = 1;
  bytes data = 2;
}
